<resources>
    <string name="app_name">Weather forecast</string>

    <string name="error_internal">Houston, we have a server-side problem. Try again in a few minutes.</string>
    <string name="error_bad_request">Validation error. Please check input parameters.</string>
    <string name="error_unknown">Something went wrong.</string>

    <string name="temp_min">Temp. min.</string>
    <string name="temp_max">Temp. max.</string>
    <string name="temp_day">Temp. day</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="average_temperature">Average temperature:</string>

</resources>