<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.yeyq.weather.R" />

        <variable
            name="item"
            type="com.yeyq.weather.features.dayDetails.presentation.model.DayDisplayable" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_day_guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_day_guideline_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <TextView
                android:id="@+id/item_day_date"
                style="@style/MediumText"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{item.date}"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Monday, 2021.10.20" />

            <TextView
                android:id="@+id/item_day_temperature_min_label"
                style="@style/SmallText"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/temp_min"
                app:layout_constraintEnd_toStartOf="@+id/item_day_guideline_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_day_date" />

            <TextView
                android:id="@+id/item_day_temperature_min"
                style="@style/BlueSmallText"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@{item.temperatureMin}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/item_day_temperature_min_label"
                app:layout_constraintRight_toRightOf="@+id/item_day_temperature_min_label"
                app:layout_constraintTop_toBottomOf="@+id/item_day_temperature_min_label"
                tools:text="10°C" />

            <TextView
                android:id="@+id/item_day_temperature_max_label"
                style="@style/SmallText"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/temp_max"
                app:layout_constraintEnd_toStartOf="@+id/item_day_guideline_2"
                app:layout_constraintStart_toEndOf="@+id/item_day_guideline_1"
                app:layout_constraintTop_toBottomOf="@+id/item_day_date" />

            <TextView
                android:id="@+id/item_day_temperature_max"
                style="@style/BlueSmallText"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@{item.temperatureMax}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/item_day_temperature_max_label"
                app:layout_constraintRight_toRightOf="@+id/item_day_temperature_max_label"
                app:layout_constraintTop_toBottomOf="@+id/item_day_temperature_max_label"
                tools:text="10°C" />

            <TextView
                android:id="@+id/item_day_temperature_day_label"
                style="@style/SmallText"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/temp_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_day_guideline_2"
                app:layout_constraintTop_toBottomOf="@+id/item_day_date" />

            <TextView
                android:id="@+id/item_day_temperature_day"
                style="@style/BlueSmallText"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@{item.temperatureDay}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/item_day_temperature_day_label"
                app:layout_constraintRight_toRightOf="@+id/item_day_temperature_day_label"
                app:layout_constraintTop_toBottomOf="@+id/item_day_temperature_day_label"
                tools:text="10°C" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>